--- a/views/movies/edit.ejs
+++ b/views/movies/edit.ejs
@@ -16,9 +16,7 @@
         <!-- how do i make it check it's a valid image -->
         <input type="text" name="cover" required placeholder="https://m.media-amazon.com/images/M/MV5BM2JkNGU0ZGMtZjVjNS00NjgyLWEyOWYtZmRmZGQyN2IxZjA2XkEyXkFqcGdeQXVyNTIzOTk5ODM@._V1_UX182_CR0,0,182,268_AL_.jpg"/>
         <label for="synopsis">Synopsis:</label><br/>
-        <input type="textbox" name="synopsis" required /><br/>
-        <label for="rating">Rating:</label>
-        <input type="number" name="rating" required /> /10
+        <input type="text" name="synopsis"/><br/>
         <br/>
         <br>
         <input type="submit" value="Submit">
