--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -4,20 +4,22 @@
     <%- include ('../partials/head.ejs') %>
   </head>
   <body>
-    <nav>
-      <%- include ('../partials/nav.ejs') %>
-    </nav>
+    <nav><%- include ('../partials/nav.ejs') %></nav>
     <div class="container">
-      <h1><%=movies.title%><br/><br/></h1>
+      <h1><%=movies.title%><br /><br /></h1>
 
-      <img src="<%= movies.cover %>"><br/>
-        <h3><button type="button" name="button"><a href="/movies/<%=movies._id%>/edit">Edit</a></button></h3>
-        <br>
-      <h4>Rating: <%=movies.rating%>/10</h4><br/>
+      <img src="<%= movies.cover %>" /><br />
+      <h3>
+        <button type="button" name="button">
+          <a href="/movies/<%=movies._id%>/edit">Edit</a>
+        </button>
+      </h3>
+      <br />
       <h4>Synopsis:</h4>
-      <p><%=movies.synopsis%></p><br/>
+      <p><%=movies.synopsis%></p>
+      <br />
       <form action="/movies/<%=movies._id%>?_method=DELETE" method="POST">
-        <input type="submit" value="DELETE"/>
+        <input type="submit" value="DELETE" />
       </form>
       <button type="button" name="button">
         <a href="/movies">Back</a>
