--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,4 @@
-<a href="/movies" class="brand-logo left">Movies</a>
+<a href="/movies" class="logo">Movies</a>
 <ul class="right">
   <li><a href="/movies/new">Create a new Movie</a></li>
   <% if (currentUser) { %>
