--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -16,9 +16,7 @@
         <!-- how do i make it check it's a valid image -->
         <input type="text" name="cover" required placeholder="https://upload.wikimedia.org/wikipedia/en/a/ae/BourneIdentityfilm.jpg"/>
         <label for="synopsis">Synopsis:</label><br/>
-        <input type="textbox" name="synopsis" required /><br/>
-        <label for="rating">Rating:</label>
-        <input type="number" step="any" name="rating" required /> /10
+        <input type="text" name="synopsis" required /><br/>
         <br/>
         <br>
         <input type="submit" value="Submit">
