--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
-<title>Movies Auth</title>
+<title>Movies</title>
 <!--Import Google Icon Font-->
 <link
   href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap"
@@ -10,6 +10,17 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
 />
-<!-- Compiled and minified JavaScript -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+<!-- Allow JQuery -->
+<script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"
+></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+/>
+<script src="scripts.js"></script>
 <link rel="stylesheet" href="main.css" />
