--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
-<a href="/movies" class="logo">Movies</a>
+<a href="/movies" class="logo">Ramajohns Movies Library</a>
 <ul class="right">
-  <li><a href="/movies/new">Create a new Movie</a></li>
+  <li><a href="/movies/new">Add a new Movie</a></li>
   <% if (currentUser) { %>
   <li>Welcome <%= currentUser.username %></li>
   <li>
