--- a/views/movies/index2.ejs
+++ b/views/movies/index2.ejs
@@ -14,11 +14,11 @@
       <!-- swim lanes -->
       <h2 class="onDeck">On-Deck Movie Schedule</h2>
       <div id="div1">
-        <div class="dropZones droppable" id="dz1"></div> 
-        <div class="dropZones droppable" id="dz2"></div> 
-        <div class="dropZones droppable" id="dz3"></div>
-        <div class="dropZones droppable" id="dz4"></div>
-        <div class="dropZones droppable" id="dz5"></div>
+        <div class="dropZones droppable" id="dz1"><div class="dates">Date: </div></div> 
+        <div class="dropZones droppable" id="dz2"><div class="dates">Date: </div></div> 
+        <div class="dropZones droppable" id="dz3"><div class="dates">Date: </div></div>
+        <div class="dropZones droppable" id="dz4"><div class="dates">Date: </div></div>
+        <div class="dropZones droppable" id="dz5"><div class="dates">Date: </div></div>
       </div>
       <!-- drag drop target area -->
       <h2>Library</h2>
