--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -4,14 +4,13 @@
     <%- include ('../partials/head.ejs') %>
   </head>
   <body>
-    <nav>
+    <!-- <nav> -->
       <%- include ('../partials/nav.ejs') %>
-    </nav>
+    <!-- </nav> -->
     <div class="container">
       <h1>Movies Index Page</h1>
       <h3>Instructions for access:</h3>
       <h4>Make an account at plex.tv. DM me your email that you used to sign up and I will add you to the server and send you a confirmation link. Once you've logged in, click on the plex icon in the top left and my server and there should be a "more" button at the bottom left that will let you see my library</h4>
-      <h2 class="onDeck">On-Deck Movie Schedule</h2>
       <div id="div1">
         <div class="dropZones droppable" id="dz1"><div class="dates"><a href=#>Assign Date</a></div></div> 
         <div class="dropZones droppable" id="dz2"><div class="dates"><a href=#>Assign Date</a></div></div> 
