--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,22 +5,31 @@
   href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap"
   rel="stylesheet"
 />
-<!-- Compiled and minified CSS -->
+<!-- CSS -->
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
 />
-<!-- Allow JQuery -->
+<link rel="stylesheet" href="/main.css" />
+<!-- Allow JQuery JS -->
 <script
   src="https://code.jquery.com/jquery-3.5.1.js"
   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
   crossorigin="anonymous"
 ></script>
+<!-- Allow JQuery CSS -->
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+<!-- <link
+  rel="stylesheet"
+  href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+/> -->
+<!-- <link rel="stylesheet" href="/resources/demos/style.css" /> -->
+<!-- Allow Flickity -->
 <link
   rel="stylesheet"
   href="https://unpkg.com/flickity@2/dist/flickity.min.css"
 />
-<script src="scripts.js"></script>
-<link rel="stylesheet" href="main.css" />
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+<!-- Allow My JS -->
+<script src="/scripts.js"></script>
