--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,15 +1,17 @@
-<a href="/movies" class="logo">Ramajohns Movies Library</a>
-<ul class="right">
-  <li><a href="/movies/new">Add a new Movie</a></li>
-  <% if (currentUser) { %>
-  <li>Welcome <%= currentUser.username %></li>
-  <li>
-    <form action="/sessions?_method=DELETE" method="POST">
-      <input type="submit" value="Log Out" class="btn-small red" />
-    </form>
-  </li>
-  <% } else { %>
-  <li><a href="/users/new">Sign Up</a></li>
-  <li><a href="/sessions/new">Log In</a></li>
-  <% } %>
-</ul>
+<nav class="black">
+  <a href="/movies" class="logo">Ramajohns Movies Library</a>
+  <ul class="right">
+    <li><a href="/movies/new">Add a new Movie</a></li>
+    <% if (currentUser) { %>
+    <li>Welcome <%= currentUser.username %></li>
+    <li>
+      <form action="/sessions?_method=DELETE" method="POST">
+        <input type="submit" value="Log Out" class="btn-small red" />
+      </form>
+    </li>
+    <% } else { %>
+    <li><a href="/users/new">Sign Up</a></li>
+    <li><a href="/sessions/new">Log In</a></li>
+    <% } %>
+  </ul>
+</nav>
