--- a/public/main.css
+++ b/public/main.css
@@ -76,3 +76,8 @@ nav {
   margin: 1px;
   background-color: black;
 }
+.button {
+  background-color: black;
+  border: solid 1px white;
+  color: white;
+}
