--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -9,6 +9,7 @@
     </nav>
     <div class="container">
       <h1>Add A Movie</h1>
+      <h4>Please use imdb for all entry fields (especially the picture URL). If you want to watch a movie, do the work guys. Thanks</h4>
       <form action="/movies" method="POST">
         <label for="title">Title:</label>
         <input type="text" name="title" required placeholder="The Bourne Identity"/>
@@ -19,7 +20,7 @@
         <input type="text" name="synopsis" required /><br/>
         <br/>
         <br>
-        <input type="submit" value="Submit">
+        <input class="button" type="submit" value="Submit">
       <form>
     </div>
   </body>
