--- a/views/movies/edit.ejs
+++ b/views/movies/edit.ejs
@@ -19,9 +19,9 @@
         <input type="text" name="synopsis"/><br/>
         <br/>
         <br>
-        <input type="submit" value="Submit">
+        <input class="button" type="submit" value="Submit">
       <form>
-      <button type="button" name="button">
+      <button class ="button" type="button" name="button">
         <a href="/movies">Back to Main Page</a>
       </button>
     </div>
